Fix structure, appears to be final fix using css page-break-inside:avoid; to stop wrapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,8 @@ body {
 
 #wrapper {
     columns: 500px;
-    column-gap: 1.25rem;    
+    column-gap: 1.25rem;  
+    padding: 0.5rem;  
 }
 
 #header {
